--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,11 @@
     <body>
         <div class="container">
             <div class="hero-unit">
-                <h5>circle 1</h5>
-                <svg width="360" height="180" class="svg">
-                    <circle cx="180" cy="45" r="12"></circle>
-                    <circle cx="60" cy="90" r="12"></circle>
-                    <circle cx="300" cy="135" r="12"></circle>
-                </svg>
-                <div class="btn-group">
-                    <button class="btn" id='reset'>reset</button>
-                    <button class="btn" id='random_size'>Random</button>
+                <h5>D3 Playground</h5>
+                <div class="svg"></div>
+                <div class="btn-group actions">
+                    <button class="btn" id='reset' data-click='reset'>reset</button>
+                    <button class="btn" id='random_size' data-click='randomAct'>Random</button>
                 </div>
             </div>
         </div>
